--- a/style.css
+++ b/style.css
@@ -202,3 +202,44 @@ input:focus, textarea:focus {
 .btn:hover {
     filter: brightness(1.15);
 }
+
+.mapa iframe {
+    width: 100%;
+    height: 100%;
+    border: 1px solid #f6f6f6;
+    border-radius: 10px;
+}
+
+footer {
+    border-top: 1px solid #f6f6f6;
+    background-color: #db5d72;
+    color: #fac8d1;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+footer a {
+    text-decoration: none;
+    color: bisque;
+    font-weight: 600;
+}
+
+@media (max-widht:870px) {
+
+    section {
+        padding-top: 56px;
+        padding-bottom: 56px;
+    }
+
+    nav a {
+        padding: 10px 11px 10px 11px;
+    }
+
+    .hero-text {
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+    }
+}
